--- a/ingresso-ng/src/app/components/movie-list/movie-list.component.html
+++ b/ingresso-ng/src/app/components/movie-list/movie-list.component.html
@@ -3,30 +3,28 @@
         <h3>Em cartaz</h3>
         <button class="btn rounded-button my-3">Ver todos</button>
         <section class="d-inline-flex">
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
+            <div class="bg-primary d-inline-block mx-3 my-2 poster">
                 olar
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2" style="width: 13rem; height: 15rem;">
-                olar
-            </div>
+            <fa-icon [icon]="faArrowCircleRight" class="list-arrow" size="2x"></fa-icon>
         </section>
     </div>
 </section>
