Front-End | Implementaçao da Movie-List e integraçao com o poster Criaçao do Advisory Rating

--- a/ingresso-ng/src/styles.css
+++ b/ingresso-ng/src/styles.css
@@ -35,6 +35,9 @@ body, html {
 .bg-35363A {
     background-color: #35363A;
 }
+.text-b3414b {
+    color: #b3414b;
+}
 
 .raised-button {
     background-color: #b3414b;
