--- a/ingresso-ng/src/app/components/banner/banner.component.html
+++ b/ingresso-ng/src/app/components/banner/banner.component.html
@@ -4,14 +4,13 @@
             <ol class="carousel-indicators">
                 <li data-target="#banner" data-slide-to="0" class="active"></li>
                 <li data-target="#banner" data-slide-to="1"></li>
-                <li data-target="#banner" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="assets/images/sonic-banner.jpg" class="d-block w-100" />
                 </div>
-                <div class="carousel-item active">
-                    <img src="assets/images/sonic-banner.jpg" class="d-block w-100" />
+                <div class="carousel-item ">
+                    <!-- <img src="assets/images/sonic-banner.jpg" class="d-block w-100" /> -->
                 </div>
             </div>
             <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
