--- a/ingresso-ng/src/app/components/movie-list/movie-list.component.css
+++ b/ingresso-ng/src/app/components/movie-list/movie-list.component.css
@@ -1,17 +1,17 @@
-/* poster */
-.poster {
-    width: 13rem; height: 15rem;
-    
+.movie-list {
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    overflow: hidden;
+    scroll-behavior: smooth;
 }
 
-.list-arrow {
-    position: absolute;
-    top: 15rem;
-    right: 0;
-    color: #b3414b;
-    cursor: pointer;
+.list {
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
 }
 
-.list-arrow: ~ .poster {
-    transform: translateX(-10rem);
+.carousel-control-next {
+    width: fit-content;
 }
