--- a/ingresso-ng/src/app/components/movie-list/movie-list.component.html
+++ b/ingresso-ng/src/app/components/movie-list/movie-list.component.html
@@ -1,30 +1,19 @@
 <section class="row">
     <div class="col-12 py-4">
-        <h3>Em cartaz</h3>
+        <h3>{{ title }}</h3>
         <button class="btn rounded-button my-3">Ver todos</button>
-        <section class="d-inline-flex">
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
+    </div>
+    <div class="col-12 pl-0">
+
+        <div [id]="'listOfFilmesCarousel' + title.replace(' ', '')" class="carousel slide" data-ride="carousel" data-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item" *ngFor="let movieList of getMoviesInSplit(); let i = index" [ngClass]="i === 0 ? 'active' : ''">
+                <app-movie-poster *ngFor="let movie of movieList" [movie]="movie"></app-movie-poster>
+              </div>
             </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <div class="bg-primary d-inline-block mx-3 my-2 poster">
-                olar
-            </div>
-            <fa-icon [icon]="faArrowCircleRight" class="list-arrow" size="2x"></fa-icon>
-        </section>
+            <a class="carousel-control-next" [href]="'#listOfFilmesCarousel' + title.replace(' ', '')" role="button" data-slide="next">
+                <fa-icon [icon]="faChevronRight" class="pr-2 text-b3414b" size='3x'></fa-icon>
+            </a>
+          </div>
     </div>
 </section>
