Front-end | Criaçao do footer Finalizaçao da index

--- a/ingresso-ng/src/app/components/navbar/navbar.component.html
+++ b/ingresso-ng/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                 <a class="nav-link text-white" href="#"><fa-icon [icon]="faTicketAlt" class="pr-2"></fa-icon>Filmes</a>
             </li>
             <li class="nav-item active mx-3">
-                <a class="nav-link btn raised-button" href="#"><fa-icon [icon]="faSignInAlt" class="pr-2"></fa-icon>Entrar</a>
+                <a class="nav-link text-white" href="#"><img src="assets/icons/user-white.svg" width="30" height="30" class="pr-2" />Entrar</a>
             </li>
         </ul>
     </div>
