--- a/ingresso-ng/src/app/app.component.html
+++ b/ingresso-ng/src/app/app.component.html
@@ -4,3 +4,6 @@
 <main class="container-fluid">
     <router-outlet></router-outlet>
 </main>
+<footer class="container-fluid bg-35363A">
+    <app-footer></app-footer>
+</footer>
