Front-end | Estilizaçao da pagina MovieDetail

--- a/ingresso-ng/src/app/components/movie-poster/movie-poster.component.html
+++ b/ingresso-ng/src/app/components/movie-poster/movie-poster.component.html
@@ -1,5 +1,5 @@
-<div class="d-inline-block mx-2 my-2 poster">
-    <a href="#" class="d-block position-relative"><img [src]="movie.poster" />
+<div class="d-inline-block mx-1 my-2 poster">
+    <a href="/movie" class="d-block position-relative"><img [src]="movie.poster" />
         <span class="poster-title">{{ movie.titulo }}</span>
         <span class="poster-play">
             <fa-icon [icon]="faPlay" class="pr-2 text-white" size='2x'></fa-icon>
