Front-end | Reajuste na pagina principal Refatoração da lista de filmes Criação da pagina de login

--- a/ingresso-ng/src/app/components/movie-list/movie-list.component.css
+++ b/ingresso-ng/src/app/components/movie-list/movie-list.component.css
@@ -15,3 +15,26 @@
 .carousel-control-next {
     width: fit-content;
 }
+
+.movie-list-arrow {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    height: 100%;
+    width: 2rem;
+}
+
+.movie-list-arrow fa-icon{ 
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+}
+
+.movie-list-arrow:hover fa-icon{
+    transition: all 0.5s ease;
+    opacity: 1;
+}
