--- a/ingresso-ng/src/app/components/movie-poster/movie-poster.component.html
+++ b/ingresso-ng/src/app/components/movie-poster/movie-poster.component.html
@@ -1,4 +1,4 @@
-<div class="d-inline-block mx-1 my-2 poster">
+<div class="d-inline-block my-2 poster">
     <a href="/movie" class="d-block position-relative"><img [src]="movie.poster" />
         <span class="poster-title">{{ movie.titulo }}</span>
         <span class="poster-play">
