--- a/ingresso-ng/src/app/components/navbar/navbar.component.html
+++ b/ingresso-ng/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active mx-3">
-                <a class="nav-link text-white" href="#"><fa-icon [icon]="faHome" class="pr-2"></fa-icon>Inicio</a>
+                <a class="nav-link text-white" href="/"><fa-icon [icon]="faHome" class="pr-2"></fa-icon>Inicio</a>
             </li>
             <li class="nav-item active mx-3">
                 <a class="nav-link text-white" href="#"><fa-icon [icon]="faTicketAlt" class="pr-2"></fa-icon>Filmes</a>
