Front-end | Criaçao dos formularios da area do administrador

--- a/ingresso-ng/src/app/components/footer/footer.component.html
+++ b/ingresso-ng/src/app/components/footer/footer.component.html
@@ -1,24 +1,24 @@
 <section class="row py-4 px-2 justify-content-center align-items-center">
     <div class="col-2 pb-3 text-center border-bottom border-white">
-        <a href="#">
+        <a routerLink="#">
             <img src="assets/icons/facebook-white.svg" width="32" height="32"/>
             <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
-        <a href="#">
+        <a routerLink="#">
             <img src="assets/icons/twitter-white.svg" width="32" height="32"/>
             <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
-        <a href="#">
+        <a routerLink="#">
             <img src="assets/icons/instagram-white.svg" width="32" height="32"/>
             <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
         </a>
     </div>
     <div class="col-2 pb-3 text-center border-bottom border-white">
-        <a href="#">
+        <a routerLink="#">
             <img src="assets/icons/linkedin-white.svg" width="32" height="32"/>
             <p class="d-inline-block text-white font-weight-bold">/CINE.OFICIAL</p>
         </a>
@@ -31,28 +31,28 @@
     <div class="col-2 pb-3 border-bottom border-white">
         <h5 class="text-white">Filmes</h5>
         <nav class="nav flex-column">
-            <a class="nav-link active p-0" href="#">Programação</a>
-            <a class="nav-link active p-0" href="#">Cartaz</a>
-            <a class="nav-link active p-0" href="#">Em breve</a>
+            <a class="nav-link active p-0" routerLink="#">Programação</a>
+            <a class="nav-link active p-0" routerLink="#">Cartaz</a>
+            <a class="nav-link active p-0" routerLink="#">Em breve</a>
         </nav>
     </div>
     <div class="col-2 pb-3 border-bottom border-white">
         <h5 class="text-white">Salas</h5>
         <nav class="nav flex-column">
-            <a class="nav-link active p-0" href="#">3D</a>
-            <a class="nav-link active p-0" href="#">XD</a>
-            <a class="nav-link active p-0" href="#">2D</a>
-            <a class="nav-link active p-0" href="#">Premium</a>
+            <a class="nav-link active p-0" routerLink="#">3D</a>
+            <a class="nav-link active p-0" routerLink="#">XD</a>
+            <a class="nav-link active p-0" routerLink="#">2D</a>
+            <a class="nav-link active p-0" routerLink="#">Premium</a>
         </nav>
     </div>
     <div class="col-2 pb-3 border-bottom border-white">
         <h5 class="text-white">Sobre nós</h5>
         <nav class="nav flex-column">
-            <a class="nav-link active p-0" href="#">Quem somos</a>
-            <a class="nav-link active p-0" href="#">Privacidade</a>
-            <a class="nav-link active p-0" href="#">Termos de uso</a>
-            <a class="nav-link active p-0" href="#">Duvidas frequentes</a>
-            <a class="nav-link active p-0" href="#">Contato</a>
+            <a class="nav-link active p-0" routerLink="#">Quem somos</a>
+            <a class="nav-link active p-0" routerLink="#">Privacidade</a>
+            <a class="nav-link active p-0" routerLink="#">Termos de uso</a>
+            <a class="nav-link active p-0" routerLink="#">Duvidas frequentes</a>
+            <a class="nav-link active p-0" routerLink="#">Contato</a>
         </nav>
     </div>
 </section>
