--- a/ingresso-ng/src/app/components/movie-session/movie-session.component.html
+++ b/ingresso-ng/src/app/components/movie-session/movie-session.component.html
@@ -130,13 +130,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     <div class="col-3 my-2">
@@ -144,13 +144,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     <div class="col-3 mb-2">
@@ -158,13 +158,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     <div class="col-3 mb-2">
@@ -172,13 +172,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     <div class="col-3 mb-2">
@@ -186,13 +186,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     <div class="col-3 my-2">
@@ -200,13 +200,13 @@
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <h6 class="d-inline-block mx-2 font-weight-bold text-b3414b">Leg</h6>
         <div>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
-            <a href="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
+            <a routerLink="#" class="py-1 px-4 m-2 shadow border rounded text-b3414b font-weight-bold d-inline-block session">16:00</a>
         </div>
     </div>
     
