--- a/ingresso-ng/src/app/components/navbar/navbar.component.html
+++ b/ingresso-ng/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light shadow-sm navbar-expand-lg bg-35363A">
-    <a href="#" class="navbar-brand">
+    <a routerLink="#" class="navbar-brand">
         <div>
             <img src="assets/icons/logo.svg" width="48" height="48"/> <span class="font-arvo font-weight-bold text-white">Cine.com</span>
         </div>
@@ -12,13 +12,13 @@
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active mx-3">
-                <a class="nav-link text-white" href="/"><fa-icon [icon]="faHome" class="pr-2"></fa-icon>Inicio</a>
+                <a class="nav-link text-white" routerLink="/"><fa-icon [icon]="faHome" class="pr-2"></fa-icon>Inicio</a>
             </li>
             <li class="nav-item active mx-3">
-                <a class="nav-link text-white" href="#"><fa-icon [icon]="faTicketAlt" class="pr-2"></fa-icon>Filmes</a>
+                <a class="nav-link text-white" routerLink="#"><fa-icon [icon]="faTicketAlt" class="pr-2"></fa-icon>Filmes</a>
             </li>
             <li class="nav-item active mx-3">
-                <a class="nav-link text-white" href="#"><img src="assets/icons/user-white.svg" width="30" height="30" class="pr-2" />Entrar</a>
+                <a class="nav-link text-white" routerLink="/login"><img src="assets/icons/user-white.svg" width="30" height="30" class="pr-2" />Entrar</a>
             </li>
         </ul>
     </div>
