--- a/ingresso-ng/src/app/pages/login/login.component.html
+++ b/ingresso-ng/src/app/pages/login/login.component.html
@@ -1,25 +1,25 @@
 <main class="container-fluid py-5">
     <section class="row text-align-center justify-content-center py-4">
-        <div class="col-12 col-sm-12 col-md-4 order-2 order-md-1">
+        <div class="col-12 col-sm-12 col-md-3 order-2 order-md-1 px-2">
             <h4>Entrar com uma rede social</h4>
-            <a class="btn bg-primary text-left text-white font-weight-bold my-2 w-75 my-3">
+            <a class="btn bg-primary text-left text-white font-weight-bold w-100 my-3">
                 <img src="assets/icons/facebook-quadrado-white.svg" width="24"/>
                 Entrar com o Facebook
             </a>
-            <a class="btn bg-primary text-left text-white font-weight-bold my-2 w-75 my-4">
+            <a class="btn bg-primary text-left text-white font-weight-bold w-100 my-3">
                 <img src="assets/icons/google-icon-white.svg" width="24"/>
                 Entrar com o Google
             </a>
-            <a class="btn raised-button rounded font-weight-bold">Criar nova conta <fa-icon [icon]="faArrowRight" class="text-white"></fa-icon></a>
+            <a routerLink="/create-user" class="btn raised-button rounded font-weight-bold">Criar nova conta <fa-icon [icon]="faArrowRight" class="text-white"></fa-icon></a>
         </div>
-        <div class="col-12 col-sm-12 col-md-4 order-1 order-md-2 border-left">
+        <div class="col-12 col-sm-12 col-md-4 order-1 order-md-2 px-3 pb-2 pt-1 section-divider-left">
             <form>
                 <h4>Entre agora com seu Cine.com</h4>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" placeholder="E-mail" />
+                <div class="form-group my-4">
+                    <input type="text" class="form-control rounded-0" placeholder="E-mail" />
                 </div>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" placeholder="Senha" />
+                <div class="form-group my-4">
+                    <input type="text" class="form-control rounded-0" placeholder="Senha" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn raised-button rounded">Entrar</button>
