--- a/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
+++ b/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
@@ -30,7 +30,7 @@
                 </section>
                 <section class="row justify-content-center py-3">
                     <div class="col-12">
-                        <button type="submit" class="btn w-100 raised-button">Adicionar tippo do ingresso</button>
+                        <button type="submit" class="btn w-100 raised-button">Adicionar tipo do ingresso</button>
                     </div>
                 </section>
             </form>
