Front-End | Criação da listagem de filmes

--- a/ingresso-ng/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/ingresso-ng/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -9,7 +9,7 @@
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="#">Pagina inicial</a>
                 <span class="border-top"></span>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/create-movie">Novo filme</a>
-                <a class="nav-link text-white" routerLink="#">Filmes em cartaz</a>
+                <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/list-movie">Filmes em cartaz</a>
                 <span class="border-top"></span>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="/create-session">Nova sessão</a>
                 <a class="nav-link text-white" routerLinkActive="active-link" routerLink="#">Ver estado das sessões</a>
