--- a/ingresso-ng/src/app/pages/login/login.component.html
+++ b/ingresso-ng/src/app/pages/login/login.component.html
@@ -13,13 +13,13 @@
             <a routerLink="/create-user" class="btn raised-button rounded font-weight-bold">Criar nova conta <fa-icon [icon]="faArrowRight" class="text-white"></fa-icon></a>
         </div>
         <div class="col-12 col-sm-12 col-md-4 order-1 order-md-2 px-3 pb-2 pt-1 section-divider-left">
-            <form>
+            <form [formGroup]="formGroup" (submit)="submit()">
                 <h4>Entre agora com seu Cine.com</h4>
                 <div class="form-group my-4">
-                    <input type="text" class="form-control rounded-0" placeholder="E-mail" />
+                    <input type="text" class="form-control rounded-0" placeholder="E-mail" formControlName="email" />
                 </div>
                 <div class="form-group my-4">
-                    <input type="text" class="form-control rounded-0" placeholder="Senha" />
+                    <input type="password" class="form-control rounded-0" placeholder="Senha" formControlName="password" />
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn raised-button rounded">Entrar</button>
