--- a/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
+++ b/ingresso-ng/src/app/pages/movie-form/movie-form.component.html
@@ -5,7 +5,7 @@
             <app-admin-sidebar></app-admin-sidebar>
         </div>
         <div class="col-9">
-            <form class="container">
+            <form class="container" [formGroup]="formGroup" (submit)="onSubmit()">
                 <section class="row justify-content-center">
                     <div class="col-12">
                         <h4 class="py-2">Novo filme</h4>
@@ -14,32 +14,32 @@
                     <div class="w-100"></div>
                     <div class="col-12">
                         <div class="form-group">
-                            <input type="text" placeholder="Titulo do filme" name="title" class="form-control rounded-0" />
+                            <input type="text" placeholder="Titulo do filme" name="title" class="form-control rounded-0" formControlName="titulo" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Data de lançamento" name="release_date" class="form-control rounded-0" />
+                            <input type="date" placeholder="Data de lançamento" name="release_date" class="form-control rounded-0" formControlName="data_lancamento" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Ano" name="year" class="form-control rounded-0" />
+                            <input type="text" placeholder="Ano" name="year" class="form-control rounded-0" formControlName="ano" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Duração" name="duration" class="form-control rounded-0" />
+                            <input type="text" placeholder="Duração" name="duration" class="form-control rounded-0" formControlName="duracao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Genêro" name="gender" class="form-control rounded-0" />
+                            <input type="text" placeholder="Genêro" name="gender" class="form-control rounded-0" formControlName="genero" />
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <textarea type="text" placeholder="Sinopse" name="sinopse" class="form-control rounded-0" rows="4"></textarea>
+                            <textarea type="text" placeholder="Sinopse" name="sinopse" class="form-control rounded-0" rows="4" formControlName="sinopse" ></textarea>
                         </div>
                     </div>
                 </section>
@@ -50,32 +50,32 @@
                     <div class="w-100"></div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Diretor" name="director" class="form-control rounded-0" />
+                            <input type="text" placeholder="Diretor" name="director" class="form-control rounded-0" formControlName="diretor" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Ator" name="actor" class="form-control rounded-0" />
+                            <input type="text" placeholder="Ator" name="actor" class="form-control rounded-0" formControlName="atores" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="País de origem" name="original_country" class="form-control rounded-0" />
+                            <input type="text" placeholder="País de origem" name="original_country" class="form-control rounded-0" formControlName="pais" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Idioma" name="language" class="form-control rounded-0" />
+                            <input type="text" placeholder="Idioma" name="language" class="form-control rounded-0" formControlName="idioma" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="Classificação etária" name="Advisory-rating" class="form-control rounded-0" />
+                            <input type="text" placeholder="Classificação etária" name="Advisory-rating" class="form-control rounded-0" formControlName="classificacao" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" placeholder="IMDB" name="imdb" class="form-control rounded-0" />
+                            <input type="text" placeholder="IMDB" name="imdb" class="form-control rounded-0" formControlName="imdb" />
                         </div>
                     </div>
                 </section>
@@ -87,7 +87,7 @@
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
                             <small class="font-weight-bold">Poster (resolução recomendada: )</small>
-                            <input type="file" name="poster" id="poster" class="rounded-0 file-input" />
+                            <input type="file" name="poster" id="poster" class="rounded-0 file-input" formControlName="poster" />
                             <label for="poster">
                                 <span class="py-2 px-2 mr-2">Escolher arquivo</span>
                                 <small>
@@ -104,7 +104,7 @@
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
                             <small class="font-weight-bold">Banner (resolução recomendada: )</small>
-                            <input type="file" name="banner" id="banner" class="rounded-0 file-input" />
+                            <input type="file" name="banner" id="banner" class="rounded-0 file-input" formControlName="banner" />
                             <label for="banner">
                                 <span class="py-2 px-2 mr-2">Escolher arquivo</span>
                                 <small>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <input type="text" placeholder="Link do trailer" name="trailer_url" class="form-control rounded-0" />
+                            <input type="text" placeholder="Link do trailer" name="trailer_url" class="form-control rounded-0" formControlName="trailer_url" />
                         </div>
                     </div>
                 </section>
