--- a/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
+++ b/ingresso-ng/src/app/pages/ticket-type-form/ticket-type-form.component.html
@@ -4,7 +4,7 @@
             <app-admin-sidebar></app-admin-sidebar>
         </div>
         <div class="col-9">
-            <form class="container">
+            <form class="container" [formGroup]="formGroup" (submit)="onSubmit()">
                 <section class="row justify-content-center">
                     <div class="col-12">
                         <h4 class="py-2">Novo tipo de ingresso</h4>
@@ -13,17 +13,17 @@
                     <div class="w-100"></div>
                     <div class="col-12 col-md-6 pr-md-5">
                         <div class="form-group">
-                            <input type="text" name="name" class="form-control rounded-0" placeholder="Nome do ingresso" />
+                            <input type="text" name="name" class="form-control rounded-0" placeholder="Nome do ingresso" formControlName="nome" />
                         </div>
                     </div>
                     <div class="col-12 col-md-6 pl-md-5">
                         <div class="form-group">
-                            <input type="text" name="price" class="form-control rounded-0" placeholder="Preço" min="1"/>
+                            <input type="text" name="price" class="form-control rounded-0" placeholder="Preço" min="1" formControlName="preco" />
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <textarea type="text" name="annotations" class="form-control rounded-0" placeholder="Observação" rows="3"></textarea>
+                            <textarea type="text" name="annotations" class="form-control rounded-0" placeholder="Observação" rows="3" formControlName="observacao"></textarea>
                         </div>
                     </div>
                 </section>
